--- a/assets/scss/components/_info-section.scss
+++ b/assets/scss/components/_info-section.scss
@@ -76,14 +76,11 @@
 // inside aside-content
 .grid-cards {
     display: grid;
-    max-width: 100%;
+    max-width: 38rem;
+    grid-template-columns: repeat(auto-fit, 17.5rem);
     margin: 3.75rem auto 0;
     row-gap: 4.25rem;
-
-    @include mq(sm) {
-        grid-template-columns: repeat(auto-fit, 17.5rem);
-        column-gap: 2.75rem;
-    }
+    column-gap: 2.75rem;
 
     &__card {
         position: relative;
